--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,37 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  
+ <distributionManagement>
+    <repository>
+      <id>my-repo1</id>
+      <name>your custom repo</name>
+      <url>http://localhost:8081/repository/samle-rel/</url>
+    </repository>
+
+    <snapshotRepository>
+      
+      <id>my-repo1</id>
+      <name>your custom repo</name>
+      <url>http://localhost:8081/repository/samle-rel/</url>
+
+    </snapshotRepository>
+
+ </distributionManagement>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </project>
