--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,14 @@
   </parent>
  
   <!-- https://mvnrepository.com/artifact/junit/junit -->
+  <dependencies>
 <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <version>4.12</version>
     <scope>test</scope>
 </dependency>
-
+<dependencies>
  
   <repositories>
     <repository>
