--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
    </executions>
    <configuration>
       <serverId>nexus</serverId>
-      <nexusUrl>http://localhost:8081/OA</nexusUrl>
+      <nexusUrl>http://localhost:8081/</nexusUrl>
       <skipStaging>true</skipStaging>
    </configuration>
 </plugin>
