--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+ <dustributionManagement>
+   
+  <repository>
+    <id>Release</id>
+    <name>maven-releases</name>
+    <url>http://localhost:8081/repository/maven-releases/</url>
+   </repository>
+   
+     <repository>
+    <id>Snapshot</id>
+    <name>maven-snapshots</name>
+    <urlhttp://localhost:8081/repository/maven-snapshots/</url>
+   </repository>
 </project>
