--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       <id>nexus-Jobvite</id>
       <url>http://localhost:8081/repository/Jobvite/</url>
    </repository>
+   <repository>
+      <id>nexus-Sample</id>
+      <url>http://localhost:8081/repository/Sample/</url>
+   </repository>
+
+
 </distributionManagement>
   
  
