--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,14 @@
     </plugins>
   </build>  
   
+  <distributionManagement>
+    <repository>
+      <id>nexus-jobvite</id>
+      <url>http://localhost:8081/repository/maven-public/</url>
+    </repository>
+  </distributionManagement>
+  
+  
+  
 </project>
 
