--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,17 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          
           <configuration>
           
           </configuration>
         </plugin> 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
   
-      </plugins>
+        </plugins>
     </pluginManagement>
   </build>
   
