--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   
   <distributionManagement>
   <repository>
-  <id>nexus-Jobvite</id>
+  <id>nexus123</id>
   <url>http://localhost:8081/repository/maven-snapshots/</url>
   </repository> 
     </distributionManagement>
