--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,22 @@
           </configuration>
         </plugin>     
         
+        <plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.7</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+</plugin>
+        
+        
+        
       </plugins>
     </pluginManagement>
   </build>
