--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,29 @@
           <configuration>
             <!-- put your configurations here -->
           </configuration>
-        </plugin>     
+        </plugin>   
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+               <execution>
+                  <id>attach-artifacts</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>attach-artifact</goal>
+                  </goals>
+                  <configuration>
+                     <artifacts>
+                        <artifact>
+                           <file>${jarprefix}-all.jar</file>
+                           <type>jar</type>
+                        </artifact>
+                     </artifacts>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
         
       </plugins>
     </pluginManagement>
