--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.whatsapp</groupId>
-  <artifactId>WhatsApp</artifactId>
+  <groupId>com.Project</groupId>
+  <artifactId>Application</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>WhatsApp</name>
+  <name>Application</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -23,7 +23,7 @@
     </dependency>
   </dependencies>
   
-   <build>
+  <build>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -31,7 +31,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <!-- put your configurations here -->
+           
           </configuration>
         </plugin>     
         
@@ -39,12 +39,11 @@
     </pluginManagement>
   </build>
   
-  <distributionManagement>
+   <distributionManagement>
    <snapshotRepository>
       <id>nexus1</id>
-      <url>http://localhost:8081/repository/whatapp/</url>
+      <url>http://localhost:8081/repository/jenkins-test/</url>
    </snapshotRepository>
 </distributionManagement>  
   
 </project>
-
