--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+     <dependency>
+      <groupId>com.Project</groupId>
+      <artifactId>Application</artifactId>
+      <version>0.0.2-20180817.055025-1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
