--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.Project</groupId>
-  <artifactId>Application</artifactId>
-  <version>0.0.8-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>Application</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-     <dependency>
-      <groupId>com.Project</groupId>
-      <artifactId>Application</artifactId>
-      <version>0.0.2-20180817.055025-1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  
-  <build>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.jobvite.platform</groupId>
+    <artifactId>scheduler</artifactId>
+    <version>2.5.2</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>scheduler-client</module>
+        <module>scheduler-service</module>
+    </modules>
+   <build>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -65,12 +45,13 @@
       </plugins>
     </pluginManagement>
   </build>
-  
-   <distributionManagement>
-   <repository>
-      <id>nexus1</id>
-      <url>http://localhost:8081/repository/jenkins-test/</url>
-   </repository>
-</distributionManagement>  
-  
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexus1</id>
+           
+            <url>http://localhost:8081/repository/jenkins-test/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
